# GDS-Private

./: .gitignore  Pipfile  README.md  postBuild  setup.cfg  setup.py
arangodb/: .gitignore  startup.sh
arangodb/dbs/: README.md
data/endo/input/: down.tsv  metabolite.txt  metabs.xlsx  updown.tsv
data/eot/input/: PlasmaMetabolites_name_match.xlsx  endo_match_inout_chems.xlsx  plasma_metab_FC.xlsx
data/metal_biomass/input/: metals_biomassPrecursors_hector.xlsx  updown_genes_FC_log2of1cutoff.xlsx
docs/: GDS_Conda_Install_Notes.docx  reactome-human-12152021_SecondaryMetabolites.csv
notebooks/: README.md
notebooks/CfB_Workshop/curli/: Training - Intersection Analysis curli.ipynb  Training - Radiate Analysis curli.ipynb  Training - Shortest Paths curli.ipynb  Training - Shortest Paths purF-curli.ipynb  radiate_analysis_curli.ipynb  radiate_traces_curli.ipynb  shortest_paths_curli.ipynb
notebooks/CfB_Workshop/metal/: Training - Shortest Paths metal.ipynb
notebooks/CfB_Workshop/rna_seq/: Training - Weighted Radiate Analysis rna-seq.ipynb
notebooks/generic/: Generic Radiate Analysis.ipynb  Generic Radiate Traces SPPN.ipynb  Generic Radiate Traces.ipynb  Generic Shortest Paths Trace SPPN.ipynb  Generic Shortest Paths Trace.ipynb
notebooks/generic/input/: acetate.csv  arcA.csv  ntrc1.csv  (+4 more)
notebooks/reactome/: Reactome GDS.ipynb  Reactome Intersection Analysis-Tracing.ipynb  Reactome Radiate Analysis.ipynb  Reactome Radiate Traces Summation.ipynb  Reactome Radiate Traces.ipynb  Reactome Shortest Paths Trace Summation.ipynb  Reactome Shortest Paths Trace.ipynb
(+53 files in other folders)
