[metadata]
name = lifelike_gds
version = 0.0.1
author = Lifelike Team, Ethan Sanchez <https://github.com/esanche06>, Nathan Weinstein <https://github.com/NathanWeinstein>, Dominik Maszczyk <https://github.com/Skitionek>, Alessandro Negro <https://github.com/alenegro81>
author_email = lifelike@biosustain.dtu.dk
description = A collection of GDS packages used by the Lifelike application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SBRG/GDS
project_urls =
    Bug Tracker = https://github.com/SBRG/GDS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
